# mlir-tutorial

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  main.td
.github/workflows/: ci.yml
basic/: CMakeLists.txt  ilist_node_test.cc  symbol_table_basic.cc
docs/: basic-concepts.md  getting-started.md
examples/01-hello-mlir/: README.md  arithmetic.mlir  float_ops.mlir  simple_function.mlir
examples/02-custom-dialect/: README.md  conditional.mlir  loops.mlir
examples/03-transformations/: README.md  before_canon.mlir  before_cse.mlir  constant_expr.mlir
note/: op.md
toy/: CMakeLists.txt  README.md  toyc.cpp
toy/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Parser.h
toy/mlir/: Dialect.cpp  MLIRGen.cpp
toy/parser/: AST.cpp
toy/tests/: add.toy
triton/: CMakeLists.txt  README.md  day01.md
triton/include/triton/Dialect/Triton/: CMakeLists.txt
triton/include/triton/Dialect/Triton/IR/: TritonDialect.td
